# market-sentry

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 00_PROJECT_SCOPE_AND_WORKFLOW.md  01_SCANNER_REQUIREMENTS.md  02_DATA_PROVIDER_INTERFACE.md  03_ALERTS_AND_VOICE.md  04_LOCAL_VOICE_PLAYBACK.md  05_ROTATION_AND_SHORT_WINDOW_METRICS.md  06_POLLING_LOOP.md  07_REAL_DATA_PROVIDER_SPEC.md  08_PROVIDER_CONFIG_AND_INTERFACES.md  09_RUNTIME_PROVIDER_WIRING.md  10_ALPACA_HTTP_PROVIDER_SKELETON.md  11_FMP_FLOAT_REFERENCE_SKELETON.md  12_COMPOSE_FIXTURE_CANDIDATES.md  13_FIXTURE_COMPOSED_PROVIDER.md  14_PROVIDER_DISPLAY_LABELS.md  15_HTTP_TRANSPORT_SKELETON.md  16_ALPACA_SNAPSHOT_FETCHER.md  17_FMP_FLOAT_FETCHER.md  18_COMPOSED_LIVE_DATA_CANDIDATE_BUILDER.md  19_OFFLINE_COMPOSED_PROVIDER_HARNESS.md  20_STANDARD_LIBRARY_HTTP_TRANSPORT.md  21_LIVE_PROVIDER_CONFIG_GATE.md  22_LIVE_COMPOSED_PLACEHOLDER.md  23_LIVE_COMPOSED_PROVIDER_SKELETON.md  24_LIVE_PROVIDER_FACTORY_BUILDER.md  25_RELATIVE_VOLUME_PROVIDER_INTERFACE.md  26_LIVE_READINESS_DIAGNOSTICS.md  27_CLI_LIVE_READINESS_PREFLIGHT.md  28_ENV_EXAMPLE_AND_PREFLIGHT_DOCS_HARDENING.md  29_LIVE_COMPOSED_ACTIVATION_PLAN.md  30_REAL_RVOL_SOURCE_STRATEGY.md  31_OFFLINE_HISTORICAL_RVOL_CALCULATION.md  32_OFFLINE_HISTORICAL_VOLUME_INPUT_ADAPTER.md  33_OFFLINE_TIME_OF_DAY_NORMALIZED_RVOL.md  34_OFFLINE_INTRADAY_BUCKET_CONSTRUCTION_ADAPTER.md  35_OFFLINE_END_TO_END_INTRADAY_RVOL_HARNESS.md  36_OFFLINE_INTRADAY_RVOL_FIXTURE_PROVIDER.md  37_OFFLINE_INTRADAY_RVOL_CANDIDATE_COMPOSITION_HARNESS.md  (+37 more)
tests/: __init__.py  (+85 more)
(+86 files in other folders)
