[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentry"
version = "0.1.0"
description = "Personal-use low-float momentum scanner scaffold with future voice alerts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Market Sentry" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
voice = [
  "pyttsx3>=2.90",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
